@@ -165,11 +165,13 @@
         <commons.dbcp2.version>2.1</commons.dbcp2.version>
         <commons_io.version>2.4</commons_io.version>
 
+        <derby.version>10.11.1.1</derby.version>
+
         <easyb.version>1.6</easyb.version>
         <easyb.plugin.version>1.4</easyb.plugin.version>
 
         <groovy.version>2.4.3</groovy.version>
-        <guava.version>18</guava.version>
+        <guava.version>18.0</guava.version>
 
         <hamcrest.version>1.3</hamcrest.version>
 
@@ -191,15 +193,23 @@
         <javax.servlet.jstl.version>1.2</javax.servlet.jstl.version>
 
         <junit.version>4.12</junit.version>
+        <junit.argLine>-Xmx1024m -XX:MaxPermSize=256m</junit.argLine>
         <junit.enableAssertions>true</junit.enableAssertions>
         <junit.failIfNoTests>true</junit.failIfNoTests>
         <!-- [WARNING] The parameter forkMode is deprecated since version 2.14. Use forkCount and reuseForks instead.-->
-        <junit.forkCount>2</junit.forkCount>
-        <junit.parallel>2</junit.parallel>
+        <junit.forkCount>50</junit.forkCount>
+        <junit.reuseForks>true</junit.reuseForks>
+
+        <!--
+        Options:
+        none, methods, classes, suites, suitesAndClasses, suitesAndMethods, classesAndMethods or all
+        -->
+        <junit.parallel>classes</junit.parallel>
         <junit.printSummary>true</junit.printSummary>
-        <junit.reuseForks>false</junit.reuseForks>
-        <junit.threadCount>2</junit.threadCount>
+        <skipTests>${skip.tests}</skipTests>
+        <junit.threadCount>50</junit.threadCount>
         <junit.useUnlimitedThreads>true</junit.useUnlimitedThreads>
+        <junit.useSystemClassLoader>false</junit.useSystemClassLoader>
 
         <log4j.version>1.2.17</log4j.version>
         <logback.version>1.1.3</logback.version>
@@ -208,9 +218,17 @@
         <mockito.version>2.0.2-beta</mockito.version>
         <powermock.version>1.6.2</powermock.version>
 
+        <reflections.version>0.9.10</reflections.version>
+
+        <selenium.version>2.47.1</selenium.version>
+
         <taglibs.standard.version>1.1.2</taglibs.standard.version>
-        <thucydides.version>0.8.0</thucydides.version>
+
+        <!--<serenity.version>0.9.275</serenity.version>-->
+        <thucydides.version>0.9.275</thucydides.version>
         <thucydides.plugin.version>0.8.0</thucydides.plugin.version>
+
+        <tomcat.servlet.version>7.0.57</tomcat.servlet.version>
 
 
         <!-- Webdriver ===================================================== -->
@@ -222,7 +240,6 @@
         <jbehave.web.version>3.5.1</jbehave.web.version>
         <jbehave.site.version>3.1.1</jbehave.site.version>
         <fluent.selenium.version>1.5.1</fluent.selenium.version>
-        <selenium.version>2.20.0</selenium.version>
         <stories>**/EtsyDotComStories.java</stories>
 
     </properties>
@@ -540,13 +557,38 @@
                 <artifactId>jstl</artifactId>
                 <version>${javax.servlet.jstl.version}</version>
             </dependency>
+
             <dependency>
                 <groupId>taglibs</groupId>
                 <artifactId>standard</artifactId>
                 <version>${taglibs.standard.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.tomcat</groupId>
+                <artifactId>tomcat-servlet-api</artifactId>
+                <version>${tomcat.servlet.version}</version>
+                <scope>provided</scope>
+            </dependency>
 
+            <!--<dependency>
+                <groupId>javax.enterprise</groupId>
+                <artifactId>cdi-api</artifactId>
+                <version>1.2</version>
+            </dependency>-->
+
+            <!--<dependency>
+                <groupId>javax.el</groupId>
+                <artifactId>javax.el-api</artifactId>
+                <version>3.0.1-b04</version>
+            </dependency>-->
+
+
+            <!--<dependency>
+                <groupId>org.glassfish.web</groupId>
+                <artifactId>javax.el</artifactId>
+                <version>2.2.6</version>
+            </dependency>-->
 
 
 
@@ -603,20 +645,40 @@
                 </exclusions>
             </dependency>
 
+            <!-- Reflections: https://github.com/ronmamo/reflections -->
+            <dependency>
+                <groupId>org.reflections</groupId>
+                <artifactId>reflections</artifactId>
+                <version>${reflections.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javassist</groupId>
+                        <artifactId>javassist</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
 
             <!-- TODO: What is this for -->
-            <dependency>
+            <!--<dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP-java6</artifactId>
                 <version>${hikaricp-java6.version}</version>
                 <scope>compile</scope>
-            </dependency>
+            </dependency>-->
 
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>${h2.version}</version>
             </dependency>
+
+            <dependency>
+                <groupId>org.apache.derby</groupId>
+                <artifactId>derbyclient</artifactId>
+                <version>${derby.version}</version>
+            </dependency>
+
 
             <!-- JMS -->
             <dependency>
@@ -637,10 +699,18 @@
                 <version>${junit.version}</version>
                 <scope>test</scope>
             </dependency>
+
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-all</artifactId>
                 <version>${hamcrest.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.assertj</groupId>
+                <artifactId>assertj-core</artifactId>
+                <version>3.1.0</version>
                 <scope>test</scope>
             </dependency>
 
@@ -665,6 +735,56 @@
 
             <!--=== dependencyManagement =======================================-->
 
+            <dependency>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven.javadoc.plugin}</version>
+            </dependency>
+
+
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-chrome-driver</artifactId>
+                <version>${selenium.version}</version>
+                <scope>test</scope>
+                <exclusions>
+                    <!-- Exclude Commons Logging in favor of SLF4j -->
+                    <exclusion>
+                        <groupId>commons-lang</groupId>
+                        <artifactId>commons-lang</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.seleniumhq.selenium</groupId>
+                <artifactId>selenium-firefox-driver</artifactId>
+                <version>${selenium.version}</version>
+                <scope>test</scope>
+                <exclusions>
+                    <!-- Exclude Commons Logging in favor of SLF4j -->
+                    <exclusion>
+                        <groupId>commons-lang</groupId>
+                        <artifactId>commons-lang</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>log4j</groupId>
+                        <artifactId>log4j</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>commons-logging</groupId>
+                        <artifactId>commons-logging</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+
             <!-- EasyB -->
             <!--<dependency>
                 <groupId>org.easyb</groupId>
@@ -679,7 +799,8 @@
                 </exclusions>
             </dependency>-->
 
-            <!-- thucydides -->
+            <!-- thucydides
+            Renamed to serenity? -->
             <!--<dependency>
                 <groupId>net.thucydides</groupId>
                 <artifactId>thucydides-core</artifactId>
@@ -712,7 +833,22 @@
                 <artifactId>thucydides-easyb-plugin</artifactId>
                 <version>${thucydides.version}</version>
                 <scope>test</scope>
-            </dependency>-->
+            </dependency>
+
+
+
+
+            <dependency>
+                <groupId>net.serenity-bdd</groupId>
+                <artifactId>core</artifactId>
+                <version>${serenity.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>net.serenity-bdd</groupId>
+                <artifactId>serenity-junit</artifactId>
+                <version>${serenity.version}</version>
+            </dependency>
+            -->
 
             <!-- JBehave -->
             <!--<dependency>
@@ -739,11 +875,6 @@
                 <scope>test</scope>
             </dependency>-->
 
-            <dependency>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>${maven.javadoc.plugin}</version>
-            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -765,7 +896,7 @@
 
     <!--
     ===========================================================================
-    == DEPENDENCies (dependencies)
+    == DEPENDENCIES (dependencies)
     == TO see dependency tree: 'mvn dependency:tree'
     ==
     == Centrally manage all versions & transitive dependency versions
@@ -784,6 +915,12 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
 
         <!-- Logging -->
         <dependency>
@@ -821,10 +958,17 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.hamcrest</groupId>
             <artifactId>hamcrest-all</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+        </dependency>
+
 
         <!-- Only used for Spring projects -->
         <dependency>
@@ -1091,10 +1235,10 @@
                                     </bannedDependencies>
                                     <!--<requireMavenVersion>
                                         <version>${maven.version.range}</version>
-                                    </requireMavenVersion>
+                                    </requireMavenVersion>-->
                                     <requireJavaVersion>
                                         <version>${java.source.version}</version>
-                                    </requireJavaVersion>-->
+                                    </requireJavaVersion>
                                 </rules>
                                 <fail>true</fail>
                             </configuration>
@@ -1107,8 +1251,8 @@
                     <artifactId>findbugs-maven-plugin</artifactId>
                     <version>${maven.findbugs.plugin}</version>
                     <configuration>
-                        <!--<effort>Max</effort>-->
-                        <!--<threshold>Low</threshold>-->
+                        <effort>Max</effort>
+                        <threshold>Low</threshold>
                         <xmlOutput>true</xmlOutput>
                     </configuration>
                     <!--<executions>
@@ -1387,7 +1531,7 @@
 
 
                 <!--
-                ===
+                https://maven.apache.org/surefire/maven-surefire-plugin/
                 -->
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -1396,7 +1540,23 @@
                     <configuration>
                         <!-- [WARNING] The parameter forkMode is deprecated since version 2.14. Use forkCount and reuseForks instead.
                         -->
-                        <forkMode>pertest</forkMode>
+                        <!--<forkMode>pertest</forkMode>-->
+                        <forkCount>${junit.forkCount}</forkCount>
+                        <reuseForks>${junit.reuseForks}</reuseForks>
+                        <parallel>${junit.parallel}</parallel>
+                        <threadCount>${junit.threadCount}</threadCount>
+                        <useUnlimitedThreads>${junit.useUnlimitedThreads}</useUnlimitedThreads>
+
+                        <useSystemClassLoader>${junit.useSystemClassLoader}</useSystemClassLoader>
+
+                        <failIfNoTests>${junit.failIfNoTests}</failIfNoTests>
+                        <printSummary>${junit.printSummary}</printSummary>
+                        <useFile>${junit.useFile}</useFile>
+
+                        <skipTests>${skipTests}</skipTests>
+
+                        <argLine>${junit.argLine}</argLine>
+
                         <includes>
                             <include>**/*Tests.java</include>
                             <!-- <include>**/*Stories.java</include> -->
